<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MotifyPasswordActivity" >
    
    <RelativeLayout 
        android:id="@+id/re_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
     	android:background="@drawable/title_bg">
        
        <TextView 
            android:id="@+id/new_log_title"
            android:text="@string/change_pass_text"
            style="@style/title_text_style"/>
        
        <Button android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:text="@string/back_btn_text"
            android:background="@drawable/btn_selector"
            android:textSize="18sp"
            android:textColor="#ffffff"/>
        
        <Button android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:layout_centerVertical="true"
            android:text="@string/save_text"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_selector"
            android:textSize="18sp"
            android:textColor="#ffffff"/>
        
    </RelativeLayout>
		
    <TextView
        android:id="@+id/textview1"
         android:layout_marginLeft="10dp"
  	     android:layout_marginRight="10dp"
  	     android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/re_title"
        android:text="@string/input_first_pwd"
        android:textColor="#75797c"
        android:textSize="18sp" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/yuanpass"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textview1"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/login_edit_normal"
        >
    </EditText>

    <TextView
        android:id="@+id/textview2"
        android:layout_marginLeft="10dp"
  	     android:layout_marginRight="10dp"
  	     android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/yuanpass"
        android:text="@string/input_second_pwd"
        android:textColor="#75797c"
        android:textSize="18sp" />
    
    <EditText
        android:layout_margin="5dp"
        android:id="@+id/new_pass"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textview2"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/login_edit_normal"
        >
    </EditText>
    
    <EditText
        android:layout_margin="5dp"
        android:id="@+id/que_pass"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textview3"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/login_edit_normal"
        >
    </EditText>

    <TextView
        android:id="@+id/textview3"
        android:layout_marginLeft="10dp"
  	     android:layout_marginRight="10dp"
  	     android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_pass"
        android:text="@string/input_confirm_pwd"
        android:textColor="#75797c"
        android:textSize="18sp" />

</RelativeLayout>
